Added image to posts, correct JWT auth